@@ -33,6 +33,7 @@
 #include <stdlib.h>
 #include <stdio.h>
 #include <string.h>
+#include "sdld.h"
 
 /*
  * Local Definitions
